ColorCard with viewData

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,17 @@
     android:orientation="vertical">
 
     <com.example.androidlearning.ColorCardView
+        android:id="@+id/card1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <com.example.androidlearning.ColorCardView
+        android:id="@+id/card2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <com.example.androidlearning.ColorCardView
+        android:id="@+id/card3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
