--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginVertical="40dp"
-    android:orientation="vertical"
-    android:paddingHorizontal="24dp"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/enable_bt_btn"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enable Bluetooth"
-        android:textAllCaps="false"
-        android:textSize="24sp" />
+        android:layout_height="match_parent"
+        android:layout_marginVertical="20dp"
+        android:orientation="vertical"
+        android:paddingHorizontal="24dp"
+        tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/disable_bt_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Disable Bluetooth"
-        android:textAllCaps="false"
-        android:visibility="gone"
-        android:textSize="24sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scrollable Content"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#B3BB86FC"/>
 
-    <Button
-        android:id="@+id/enable_discoverability_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Enable Discoverable"
-        android:textAllCaps="false"
-        android:textSize="24sp" />
+        <Button
+            android:id="@+id/enable_bt_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Enable Bluetooth"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/discover_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Discover Devices"
-        android:textAllCaps="false"
-        android:textSize="24sp" />
+        <Button
+            android:id="@+id/disable_bt_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Disable Bluetooth"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:visibility="gone" />
 
-    <Button
-        android:id="@+id/connect_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Connect"
-        android:textAllCaps="false"
-        android:textSize="24sp" />
+        <Button
+            android:id="@+id/enable_discoverability_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Enable Discoverable"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/data_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="Data to send"
-        />
+        <Button
+            android:id="@+id/discover_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Discover Devices"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/send_data_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Send Data"
-        android:textAllCaps="false"
-        android:textSize="24sp" />
+        <Button
+            android:id="@+id/connect_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Connect"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/data_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Data to send" />
 
 
-    <ListView
-        android:id="@+id/device_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp" />
+        <Button
+            android:id="@+id/send_data_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Send Data"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/get_device_data_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Get Device Data"
+            android:textAllCaps="false"
+            android:textSize="20sp" />
 
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/device_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp" />
+
+        <TextView
+            android:id="@+id/data_read"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Data Read" />
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
