--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.androidlearning.BlueButtonView
+    <com.example.androidlearning.BlueButtonViewWrapper
         android:id="@+id/blueButtonView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
