--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,168 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Click"
-        android:textAllCaps="false"
-        android:textSize="24sp"
+    <View
+        android:id="@+id/y_axis"
+        android:layout_width="2dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="50dp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+         />
+
+    <View
+        android:id="@+id/x_axis"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="50dp"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/box_row"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:flexDirection="row"
+        app:justifyContent="space_evenly"
+        app:alignItems="flex_end"
+        app:flexWrap="nowrap"
+        app:layout_constraintBottom_toTopOf="@id/x_axis"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/y_axis">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="100dp"
+            android:src="@drawable/rounded_vertical_rectangle_red" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="100dp"
+            android:src="@drawable/rounded_vertical_rectangle_green" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="100dp"
+            android:src="@drawable/rounded_vertical_rectangle_blue" />
+
+
+    </com.google.android.flexbox.FlexboxLayout>
+
+    <com.google.android.flexbox.FlexboxLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:flexDirection="row"
+        app:justifyContent="space_evenly"
+        app:flexWrap="nowrap"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/y_axis"
+        app:layout_constraintTop_toBottomOf="@id/x_axis">
+
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Jan"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Feb"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Apr"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+
+
+    </com.google.android.flexbox.FlexboxLayout>
+
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/y_labels"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
+        app:flexDirection="column_reverse"
+        app:justifyContent="space_between"
+        app:alignItems="flex_end"
+        app:flexWrap="nowrap"
+        android:paddingEnd="4dp"
+        app:layout_constraintBottom_toTopOf="@id/x_axis"
+        app:layout_constraintEnd_toStartOf="@id/y_axis">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="0"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="2"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="4"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="6"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="8"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="10"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="12"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+
+    </com.google.android.flexbox.FlexboxLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
