--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,73 +7,75 @@
     tools:context=".MainActivity">
 
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/teal_200"-->
-<!--        android:minHeight="?attr/actionBarSize"-->
-<!--        android:theme="?attr/actionBarTheme"-->
-<!--        app:title="Toolbar"-->
-<!--        app:titleTextColor="@color/material_dynamic_neutral0"-->
-<!--        app:titleMarginStart="12dp"-->
-<!--        app:subtitle="Demo"-->
-<!--        app:subtitleTextColor="@color/white"-->
-<!--        app:navigationIcon="@drawable/ic_add_contact"-->
-<!--        app:logo="@drawable/logo"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
+    <!--    <androidx.appcompat.widget.Toolbar-->
+    <!--        android:id="@+id/toolbar"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@color/teal_200"-->
+    <!--        android:minHeight="?attr/actionBarSize"-->
+    <!--        android:theme="?attr/actionBarTheme"-->
+    <!--        app:title="Toolbar"-->
+    <!--        app:titleTextColor="@color/material_dynamic_neutral0"-->
+    <!--        app:titleMarginStart="12dp"-->
+    <!--        app:subtitle="Demo"-->
+    <!--        app:subtitleTextColor="@color/white"-->
+    <!--        app:navigationIcon="@drawable/ic_add_contact"-->
+    <!--        app:logo="@drawable/logo"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
 
-<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:gravity="center">-->
-<!--            <ImageButton-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@drawable/logo"-->
-<!--                />-->
+    <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:orientation="horizontal"-->
+    <!--            android:gravity="center">-->
+    <!--            <ImageButton-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:background="@drawable/logo"-->
+    <!--                />-->
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Toolbar"-->
-<!--                android:textSize="24sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textColor="@color/purple_500"-->
-<!--                android:layout_marginStart="12dp"/>-->
+    <!--            <TextView-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:text="Toolbar"-->
+    <!--                android:textSize="24sp"-->
+    <!--                android:textStyle="bold"-->
+    <!--                android:textColor="@color/purple_500"-->
+    <!--                android:layout_marginStart="12dp"/>-->
 
-<!--            <Space-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                />-->
+    <!--            <Space-->
+    <!--                android:layout_width="0dp"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_weight="1"-->
+    <!--                />-->
 
-<!--            <ImageButton-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@drawable/ic_favorite"-->
-<!--                android:layout_marginEnd="20dp"-->
-<!--                />-->
+    <!--            <ImageButton-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:background="@drawable/ic_favorite"-->
+    <!--                android:layout_marginEnd="20dp"-->
+    <!--                />-->
 
 
-<!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
+    <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
 
-<!--    </androidx.appcompat.widget.Toolbar>-->
+    <!--    </androidx.appcompat.widget.Toolbar>-->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:menu="@menu/toolbar_menu"
-        android:background="@color/purple_500"
-        app:title="Toolbar"/>
-
+        app:navigationIcon="@drawable/ic_arrow_back"
+        app:title="Toolbar"
+        app:titleTextColor="@color/white"
+        android:foregroundGravity="center"
+        tools:menu="@menu/toolbar_menu" />
 
 
     <Button
